# GAAS

./: .gitignore  AUTHORS  AUTHORS.md  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING for GAAS.md  CONTRIBUTING.md  LICENSE  README.md  Setup.md  Testing.md  build_all.sh  readme_zh.md
algorithms/GlobalOptimizationGraph/: CMakeLists.txt  CallbacksBufferBlock.h  CooridinatesManager.h  G2OTypes.cpp  G2OTypes.h  G2OTypes_EdgeSLAMPRV.h  GOG_Frame.h  GPSExpand.h  GlobalOptimizationGraph.cpp  GlobalOptimizationGraph.h  README.md  ROS_IO_Manager.h  StateTransfer.h  config.yaml  main.cpp  ros_buffer_helper.h  utils.h  visualizer.py
algorithms/GlobalOptimizationGraph_GTSAM/: CMakeLists.txt  CallbacksBufferBlock.h  G2OTypes.cpp  GPSExpand.h  GPS_SLAM_Matcher.h  GPS_like.h  GlobalOptimizationGraph.cpp  GlobalOptimizationGraph.h  ROS_IO_Manager.h  StateTransfer.h  StateTransfer.md  config.yaml  gps_xyz_visualizer.py  main.cpp  ros_buffer_helper.h  rviz_msg_vis.py  test.cpp  visualize_rpy_original.py  yaw_visualizer.py
algorithms/GlobalOptimizationGraph_GTSAM/modules/: Barometer_module.h  Loop_utils.h  Optimizer_utils.h  Preprocess.h  RPY_Quat_utils.h
algorithms/GlobalOptimizationGraph_GTSAM/results/: fused_position.txt  gps_position.txt  slam_position.txt  visualize.py
algorithms/GlobalOptimizationGraph_GTSAM/scripts/: create_bag.py
algorithms/GlobalOptimizationGraph_GTSAM/ygz_common_headers/: NumTypes.h  se3.hpp  so3.hpp
algorithms/MeshGenerator/src/: CMakeLists.txt  MeshGenerator.h  MeshObject.h  Pipeline.cpp  Pipeline.h  ROS_Wrapper.h  ROS_node.cpp  cam_config.h  cv_types.h  cv_utils.h  pcl_utils.h
algorithms/MultiCamSLAM/src/: CMakeLists.txt  FeatureFrontEndCV.h  Frame.h  FrameManager.h  FrameWiseGeometry.h  IMU_Preint_GTSAM.h  ReprojectionInfoDatabase.h  SLAMOptimizationGraph.h  SLAM_simple.h  SlidingWindow.h  TypeDefs.h  Visualization.h
algorithms/MultiCamSLAM/src/test/: CMakeLists.txt  test_FrameManager2_trackLR.cpp  test_FrameManager4_trackLocalFrame.cpp  test_SLAM_offline.cpp  test_SLAM_simple.cpp  test_VO.cpp  test_cvFrontEnd1.cpp  test_cvFrontEnd2_optflow.cpp  test_cvFrontEnd3_createStereoFrame.cpp
algorithms/MultiCamSLAM/src/utils/: Debug_cv_log.h  Timer.h
algorithms/MultiCamSLAM2/src/test/: CMakeLists.txt  test_SLAM_frontend_offline.cpp  test_SLAM_offline.cpp  test_SLAM_simple.cpp
algorithms/Perception/vision_lidar_fusion/: CMakeLists.txt  README.md
algorithms/Perception/vision_lidar_fusion/src/: prev_fusion.h  vision_lidar_fusion_node.cpp
algorithms/fast_planner/GAAS_Planner/: CMakeLists.txt  main.cpp  test_point.txt
algorithms/fast_planner/GAAS_Planner/include/: astar.h  hybrid_astar.h  test_octomap.hpp
algorithms/fast_planner/GAAS_Planner/src/: astar.cpp  hybrid_astar.cpp
algorithms/fast_planner/transform_pointcloud/: CMakeLists.txt  manifest.xml
algorithms/loop_closing/DBoW2/: CMakeLists.txt  README.md  README_original.md  process.py  vocab.txt
algorithms/loop_closing/DBoW2/demo/: demo.cpp
algorithms/loop_closing/DBoW2/src/: DBoW2.cmake.in  FBrief.cpp  FORB.cpp  FSurf64.cpp
algorithms/scene_retrieving/: .gitignore  .point_and_fly.sh.swp  CMakeLists.txt  README.md  UNKNOWN.INFO  all.txt  build.sh  buildloopclosing.sh  debug.sh  loadedpose.csv  log_controller_20191009-193329.10541  point_and_fly.sh  relative_and_average_file.txt  relative_distance_file.txt  relativetransform.txt  run_demo_stereo.sh  scene.scn  test.scene  valgrind.sh  visualizePose.py
algorithms/scene_retrieving/config/: ros_global_optimization_config.yaml  scene_retrieve.yaml
algorithms/scene_retrieving/debug_scripts/: debug.py  relative_and_average.py
algorithms/scene_retrieving/image2/: scene.scn
algorithms/scene_retrieving/include/: Cv_mat.h  cv_helper.h  eigen_boost_serialization.h
algorithms/scene_retrieving/multiscene_demo_files/: scene_file_list.json
algorithms/scene_retrieving/src/: CMakeLists.txt  MakeSceneEurocStereoVIO_ros.cpp  MakeSceneFromOpenSfMModel.cpp  building.cpp  building.h  controller.cpp  controller.h  controller_node.cpp  demo_mono_main.cpp  demo_stereo_main.cpp  global_frame_synchronizer.h  multi_cam_scene_retriever.h  multi_scene_retriever.cpp  multi_scene_retriever.h  ros_global_optimization.cpp  scene_frame_properties.h  scene_retrieve.cpp  scene_retrieve.h  scene_retrieving_ros.cpp  world.cpp  world.h
algorithms/scene_retrieving/src/PointAndFlyController/: CMakeLists.txt  controller.cpp  controller.h  controller_node.cpp
algorithms/scene_retrieving/src/multi_cam_utils/: cam_info.h
algorithms/src/LocalizationAndMapping/icp_lidar_localization/: CMakeLists.txt  README.md  package.xml
algorithms/src/LocalizationAndMapping/imu_preint/: CMakeLists.txt  README.md  package.xml
algorithms/src/LocalizationAndMapping/registration_localization/: CMakeLists.txt  package.xml
algorithms/src/Preprocessing/ground_point_removal/: CMakeLists.txt  README.md
algorithms/src/SystemManagement/hud/: CMakeLists.txt  package.xml
algorithms/src/SystemManagement/json_request_response_lib/: CMakeLists.txt  README.md  package.xml
algorithms/src/SystemManagement/px4_state_reporter/: CMakeLists.txt  README.md  package.xml
algorithms/src/SystemManagement/state_surveillance/: CMakeLists.txt  package.xml
deprecated/algorithms/sfm/sfm_plane_detection/: CMakeLists.txt
deprecated/software/Obstacle_Map/: CMakeLists.txt  README.md  generate.sh  manifest.xml  run.sh
deprecated/software/Obstacle_Map/calibration/: mynteye_q_only.yml  mynteye_sim2.yml
deprecated/software/Obstacle_Map/cfg/: CamToRobotCalibParams.cfg
deprecated/software/Obstacle_Map/docs/: CamToRobotCalibParamsConfig-usage.dox  (+2 more)
software/ObstacleMap/obstacle_map/: CMakeLists.txt  README.md  build.sh  generate.sh
software/SLAM/ygz_slam_ros/: .gitignore  CMakeLists.txt  CreateScene.sh  LICENSE  Note.md  README.MD  bug_fixes.md  comparepose.py  debug.txt  dependency.txt  do_compile.sh  generate.sh  install_dep.sh  makescene.sh  run.sh  scene.scn  slampose.csv  slampose20.csv  slampose200.csv  slampose2000.csv  slampose_without_attitude.csv  visualize.py  ygz_slam_ros.kdev4
(+1094 files in other folders)
